[package]
name = "upt"
version = "1.1.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", default-features = false, features = [] }
chrono-humanize = "0.2.3"
clap = { version = "4.5.20", features = ["derive", "cargo"] }
clap_complete = "4.5.37"
crossterm = "0.28.1"
ctrlc = "3.4.4"
home = "0.5.9"
simple-error = "0.3.0"
uptime_lib = "0.3.1"
