[package]
name = "upt"
version = "1.1.8"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.39", default-features = false, features = [] }
chrono-humanize = "0.2.3"
clap = { version = "4.5.50", features = ["derive", "cargo"] }
clap_complete = "4.5.59"
crossterm = "0.29.0"
ctrlc = "3.5.0"
home = "0.5.12"
simple-error = "0.3.2"
uptime_lib = "0.3.1"
